--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -16,7 +16,9 @@
       <li><a href="#">投稿を並び替えする</a>
         <ul>
           <li><a href="/">投稿が新しい順</a></li>
+          <li><a href="/ascendant">投稿が古い順</a></li>
           <li><a href="/ranking">いいね！ランキング順</a></li>
+          
         </ul>
       </li>
     </ul>
