--- a/app/views/tools/show.html.erb
+++ b/app/views/tools/show.html.erb
@@ -18,6 +18,7 @@
             
             
           <li><a href="/tools/<%= params[:id] %>">投稿が新しい順（<%= @tool.name %>）</a></li>
+          <li><a href="/tools/<%= params[:id] %>/ascendant">投稿が古い順（<%= @tool.name %>）</a></li>
           <li><a href="/tools/<%= params[:id] %>/show_ranking">いいね！ランキング順（<%= @tool.name %>）</a></li>
         </ul>
       </li>
