--- a/app/assets/stylesheets/original.css.scss
+++ b/app/assets/stylesheets/original.css.scss
@@ -339,6 +339,17 @@ img.title{
             max-width:100%;
             max-height:100%;
  }
+ 
+ .commenter_image {
+          
+          width: 60px;
+          height: 60px;
+          overflow: hidden;
+          border-radius: 60px;
+          border-color: $mizuiro;
+          border-width: 3px;
+          
+        }
 
 
 
@@ -364,7 +375,7 @@ img.title{
 .treemenu {
   float: right;
   width: 256px;
-  border-right: 1px solid #ccc;
+  // border-right: 1px solid #ccc;
 }
 /*階層1*/
 .treemenu .lv1btn {
@@ -471,7 +482,7 @@ img.title{
 
 .render_post {
     margin: 0px 50px 30px;
-    padding: 30px 30px 50px 30px ;
+    padding: 15px 30px 15px 30px ;
     border-width: 1;
     border-color: $mizuiro;
     border-style: solid;
