--- a/app/views/posts/destroy.html.erb
+++ b/app/views/posts/destroy.html.erb
@@ -3,6 +3,6 @@
     <h3>
       削除が完了しました。
     </h3>
-    <a class="btn" href="/">投稿一覧へ戻る</a>
+    <a class="btn" href="/users/<%= @user.id %>">マイページへ戻る</a>
   </div>
 </div>
