--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,6 +1,9 @@
 <div class="content_row">
   <h3>みんなのツールボックスに投稿しよう</h3>
       <br>
+ 
+  <%=  @error if @error.present? %>
+  
   
   <div class="container">
     <%= form_for @post,  html: {onSubmit:"return check()"} do |f| %>
@@ -16,9 +19,9 @@
       <br>
       <br>
       
-    <% junban = ["ichiban", "niban", "sanban", "yoban", "goban", "rokuban"] %>
+    
     <% i = 0  %> 
-    <% while i < 6  %> 
+    <% while i < 10  %> 
       <div id="post_form">
       <!--最初ブロックの引数にもjunbanを入れていたが、消したらerrorがなくなった-->
       <%= f.fields_for :imagetexts do |imagetexts_form| %>
@@ -41,7 +44,7 @@
         <%= imagetexts_form.label :content, "本文その#{i+1}" %><br>
         <%= imagetexts_form.text_area :content,:size=>"100",:col=>"40" ,:row=>"20" %><br >
         
-        <%= imagetexts_form.hidden_field :status, :value => junban[i] %>
+        <%= imagetexts_form.hidden_field :status, :value => i %>
         <% i = i + 1   %>
         <br>
         <br>
