--- a/app/views/tools/new.html.erb
+++ b/app/views/tools/new.html.erb
@@ -1,13 +1,18 @@
 <div class="content_row">
-  <p><h3>カテゴリーを増やそう☆</h3></p>
+  <p><h3>ツールを増やそう☆</h3></p>
       <br>
   
   <div class="container">
     <%= form_for @tool do |f| %>
       <div class="field">
-    
-        <%= f.label :name, "カテゴリー名" %>
+        
+        
+        <%= f.label :category_id, "カテゴリ"%>
+        <%= f.collection_select :category_id, Category.all, :id, :name%>
+        <%= f.label :name, "ツール名" %>
         <%= f.text_field :name , :size => "50"%>
+        <%= f.hidden_field :user_id, :value => current_user.id %>
+        
       
       </div>
   
