--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -38,6 +38,8 @@
     <%= f.text_area :introduction, autocomplete: "off", :size=>"60x10" %>
   </div>
   
+  
+  <h4>プロフィール画像選択</h4>
   <div class="field">
     <%= f.file_field :avatar %>
   </div>
