--- a/app/views/posts/_modal.html.erb
+++ b/app/views/posts/_modal.html.erb
@@ -1,7 +1,7 @@
 
-<!--苦節の末、image tagのオプションの形は下で良かったらしい。-->
-<!--image_tag内のtargetキーでどの画像を開くか指定しているらしい。そしてcontent_tag内のidと一致させ指定している。-->
-<!--なぜcontent_tagをｓ仕様ｓているかは、divタグの中で"#{modalname}"が式展開できなかったかららしい。-->
+<%#苦節の末、image tagのオプションの形は下で良かったらしい。
+image_tag内のtargetキーでどの画像を開くか指定しているらしい。そしてcontent_tag内のidと一致させ指定している。
+なぜcontent_tagをｓ仕様ｓているかは、divタグの中で"#{modalname}"が式展開できなかったかららしい。%>
 
 
 <% modalname = 'modal' +  "#{imagetexts.id}".to_s %>
