--- a/app/views/users/series_new.html.erb
+++ b/app/views/users/series_new.html.erb
@@ -13,6 +13,7 @@
       
           <%= select_tag :post1, options_for_select(@titles, :include_blank => true)%>
           <%= select_tag :post2, options_for_select(@titles) %>
+          <%= select_tag :post3, options_for_select(@titles) %>
           <%= select_tag :post4, options_for_select(@titles) %>
           <%= select_tag :post5, options_for_select(@titles) %>
           <%= select_tag :post6, options_for_select(@titles) %>
