--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,3 +1,3 @@
 $(".comment_container").html("<%= escape_javascript(render partial: 'posts/comments') %>");
 
-<!--良かれと思って@変数インスタンス渡したらエラーがでまくってワロタ1日無駄にした。localeではなんも渡さなくていいらしい-->
+<%#良かれと思って@変数インスタンス渡したらエラーがでまくってワロタ1日無駄にした。localeではなんも渡さなくていいらしい%>
