--- a/app/views/posts/_posts.html.erb
+++ b/app/views/posts/_posts.html.erb
@@ -1,6 +1,4 @@
- <!--<div class="content_post" style="background-image": url(<);>-->
-
-    <% @posts.each do |post| %>
+<% @posts.each do |post| %>
   
   
       
@@ -34,7 +32,7 @@
     
     
     
-    <!--取得したimagetextsのレコードはなぜか配列に入っているらしい。なので書き方は[0]を付けてあげないといけない-->
+    <%#取得したimagetextsのレコードはなぜか配列に入っているらしい。なので書き方は[0]を付けてあげないといけない%>
      <% imar = []%>
         <% post.imagetexts.each do |im| %>
             <% imar << im.image.url %>
