--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -62,9 +62,10 @@
       <%= f.label :youtube, "Youtube動画埋め込み"%>
       <%= f.text_field :youtube,:size=>"70" %>
         <br>
+        <br>
         
   <div class="actions">
-      <%= f.submit %>
+      <%= f.submit "投稿する" %>
      </div>
       <% end %>
       
