--- a/app/views/posts/_comments.html.erb
+++ b/app/views/posts/_comments.html.erb
@@ -2,7 +2,7 @@
     <% if current_user %>
       <%= form_tag("/posts/#{@post.id}/comments", :remote=> true, method: :post, confirm:"コメントを投稿してよろしいでしょうか") do %>
         <textarea name="text" placeholder="コメントする" rows="2" cols="100"></textarea>
-        <input type="submit" value="SENT">
+        <%= submit_tag 'コメントする', :data => { :confirm => 'この内容でコメントしますか？' } %>
       <% end %>
     <% end %>
     
