--- a/app/views/posts/_comments_images.html.erb
+++ b/app/views/posts/_comments_images.html.erb
@@ -10,11 +10,13 @@
         
         <%  if comments_images %>
          
-          <%  comments_images = comments_images.uniq  %>
+          <%   comments_images.uniq!  %>
           
           <% comments_images .each do |comment_image| %>
           
             <%#comment＿imageのidは最初どうやったら取れるのかわからなかったけど、以下のようにやったら取れた %>
+            
+            
             <% next if comment_image.instance.id == post.user.avatar.instance.id %>
          
             <span class="poster_image2"><%= image_tag comment_image ,:class => "your_icon_image" %></span>
