--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -37,6 +37,13 @@
   <div class="field">
     <%= f.file_field :avatar, placeholder: "画像アップロード" %>
   </div>
+  
+  
+     <div class="field">
+    <%= f.label :twitter_account %><br />
+    <%= f.text_field  :twitter_account, :title=>"twitterのアカウント", :size=>"60" %>
+  </div>
+
 
   <div class="actions">
     <%= f.submit "登録情報を変更する" %>
