--- a/app/views/users/inquiry.html.erb
+++ b/app/views/users/inquiry.html.erb
@@ -10,7 +10,7 @@
     <%= text_field_tag :email ,current_user.email %>
     
     <%= label_tag(:text, "問い合わせ内容") %>
-    <%= text_field_tag :text %>
+    <%= text_area_tag :text %>
 
   
   
