--- a/app/views/users/update.html.erb
+++ b/app/views/users/update.html.erb
@@ -2,6 +2,7 @@
 <div class="row form">
   <div class="col-lg-12">
     <h3>プロフィールの編集が完了しました。</h3>
+    <%= link_to "マイページに戻る", @user %>
     <%= link_to "ホームに戻る", root_path %>
   </div>
 </div>
