うーんデプロイできない

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
       <% end %>
       <!--ユーザーがサインインしてる場合-->
       
-      
+      <%= favicon_link_tag('favicon.ico') %>
      
         
       
