--- a/app/views/users/inquiry.html.erb
+++ b/app/views/users/inquiry.html.erb
@@ -1,8 +1,12 @@
 <h2>お問い合わせ</h2>
 
 <%= form_tag("/users/inquiry_send", method: "post") do %>
-
-    <%  user = current_user if current_user%>
+    
+    <%  if current_user %>
+        <%  nickname = current_user.nickname%>
+        <%  email = current_user.email%>
+    <% end %>
+    
     <%= label_tag(:name, "お名前" )%>
     <%= text_field_tag :name ,  user.nickname%>
     
